2012-10-05  Richard Frith-Macdonald <rfm@gnu.org>

        Initial (1.0) release.
